--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=d0a62230107d9f35fc5715ee2e7712a9
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+#MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
